# ddt4all

./: .gitignore  .gitmodules  DDT4ALL.BAT  README.md  dataeditor.py  ddt4all.py  ddt4all.sh  default.htm  displaymod.py  doip.py  ecu.py  elm.py  flake.nix  main.py  make_mobile_app_data_test.py  make_mobile_app_project.pdt  options.py  package.py  parameters.py  parameters.xml  pyproject.toml  qstyle.qss  report.py  requirements.txt  resources.qrc  sniffer.py  sysroot.toml  try_build_mobile_apps.py  uiutils.py  usbdevice.py  version.py  wininstaller-py3.8.6-inno-5-32-bits.iss  wininstaller.iss
.github/: FUNDING.yml
.github/workflows/: android.yml  build-appimage.yml  build-installer.yml  codeql-analysis.yml  python-app.yml
EcuTweaker/: .gitignore  build.gradle  gradle.properties  settings.gradle  upload-keystore.jks
EcuTweaker/EcuTweaker/: build.gradle
EcuTweaker/ecu/: build.gradle
EcuTweaker/usbserial/: build.gradle
address/: addressing.json  dnat.json  snat.json  vehicles.json
crcmod/: __init__.py  _crcfunpy.py  crcmod.py  predefined.py
ddt4all_data/: projects.json  qstyle-d.qss  qstyle.qss
ddt4all_data/inno-win-setup/: wininstaller-py3.8.6-inno-5-32-bits.iss  wininstaller.iss
ddt4all_data/locale/: ddt4all.pot
ddt4all_data/mac-os/: builddmg.sh  entitlements.plist  main.spec
ddt4all_data/tools/: po_create.sh  po_merge.bat  po_to_mo.bat  python_files_Linux.txt  python_files_Windows.txt
ddtplugins/: README.md  ab90_reset.py  card_programming.py  clio3_eps_reset.py  clio4_eps_reset.py  laguna2_uch_reset.py  laguna3_uch_reset.py  megane2_uch_reset.py  megane3_ab_reset.py  megane3_eps_reset.py  megane3_uch_reset.py  rsat4_reset.py  vin_crc.py  zoe_waterpump_counter_reset.py
dtt4all_data/: addressing.json  dnat.json  projects.json  qstyle-d.qss  qstyle.qss  snat.json  vehicles.json
dtt4all_data/inno-win-setup/: wininstaller-py3.8.6-inno-5-32-bits.iss  wininstaller.iss
dtt4all_data/locale/: ddt4all.pot
dtt4all_data/tools/: po2mo.bat  pot_create.bat  python_files_Linux.txt
json/: addressing.json  readme.txt
locale/: dataeditor.pot  ddt4all.po  ddt4all.pot  ddt4all_main.po  ddt4all_main.pot  displaymod.pot  ecu.pot  elm.pot  sniffer.pot
locales/: ddt4all.pot
plugins/: ab90_reset.py  card_programming.py  clio3_eps_reset.py  clio4_eps_reset.py  laguna2_uch_reset.py  laguna3_uch_reset.py  megane2_uch_reset.py  megane3_eps_reset.py  megane3_uch_reset.py  rsat4_reset.py  vin_crc.py
resources/icons/: obd.icns
resources/styles/: qstyle-d.qss  qstyle.qss
scripts/: gen_qrc.py  i18n.py  resources.qrc  translate_batch_ia.py
serial/: rfc2217.py  serialposix.py  serialutil.py
serial/tools/: list_ports_common.py  list_ports_linux.py
setup_tools/: README.md
setup_tools/appimage/: build.sh
setup_tools/inno-win-setup/: fixModX64.bat  fixModX86.bat  version.h  wininstaller-py3.8.6-inno-5-32-bits.iss  wininstaller.iss
setup_tools/mac-os/: README.md  builddmg.sh  entitlements.plist  main.spec
src/: README.md  placeholder  placeorder
src/ddt4all/: file_manager.py  main.py  options.py  resources_rc.py  version.py
tests/: conftest.py
tests/smoke/: test_imports.py
tools/: all_po_merge.bat  all_po_mo.bat  it_po2mo.bat  it_po_merge.bat  po_create.sh  po_merge.bat  po_statistics.bat  po_to_mo.bat  pot_create.bat  python_files.txt  python_files_Linux.txt  python_files_Windows.txt
(+349 files in other folders)
